# mergelens

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/mergelens/compare/: analyzer.py  metrics.py  strategy.py
src/mergelens/diagnose/: attribution.py  config_parser.py
src/mergelens/mcp/: server.py
src/mergelens/report/: generator.py
src/mergelens/utils/: cache.py  hf_utils.py  tensor_ops.py
tests/: test_cache.py
